force-app/main/default/objects/facebook_sign_up_form__c/facebook_sign_up_form__c.object-meta.xml
<CustomObject>
    <label>facebook sign up form</label>
    <nameField>
        <label>facebook sign up form  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>facebook sign up form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>