force-app/main/default/objects/facebook_sign_up_form__c/fields/confirm_password__c.field-meta.xml
<CustomField>
    <fullName>confirm_password__c</fullName>
    <label>confirm password</label>
    <length>70</length>
    <type>Text</type>
</CustomField>