force-app/main/default/objects/facebook_sign_up_form__c/fields/first_name__c.field-meta.xml
<CustomField>
    <fullName>first_name__c</fullName>
    <label>first name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>