force-app/main/default/objects/facebook_sign_up_form__c/fields/mobile_no_or_email_address__c.field-meta.xml
<CustomField>
    <fullName>mobile_no_or_email_address__c</fullName>
    <label>mobile no. or email address</label>
    <length>70</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>