force-app/main/default/objects/facebook_sign_up_form__c/fields/surname__c.field-meta.xml
<CustomField>
    <fullName>surname__c</fullName>
    <label>surname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>