force-app/main/default/objects/facebook_sign_up_form__c/validationRules/confirm_password.validationRule-meta.xml
<ValidationRule>
    <fullName>confirm_password</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( password__c = confirm_password__c )</errorConditionFormula>
    <errorDisplayField>confirm_password__c</errorDisplayField>
    <errorMessage>plz enter same password</errorMessage>
</ValidationRule>