force-app/main/default/objects/facebook_sign_up_form__c/validationRules/mobile_number_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>mobile_number_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR((REGEX( mobile_no_or_email_address__c  ,&quot;[a-zA-Z0-9\\.\\-]+[@][a-z]+\\.[a-z]+&quot;)), REGEX( mobile_no_or_email_address__c , &quot;[1-9]{1}[0-9]{9}&quot;) ))</errorConditionFormula>
    <errorDisplayField>mobile_no_or_email_address__c</errorDisplayField>
    <errorMessage>email should be in proper format</errorMessage>
</ValidationRule>