force-app/main/default/objects/facebook_sign_up_form__c/validationRules/mobile_validation_rule_2.validationRule-meta.xml
<ValidationRule>
    <fullName>mobile_validation_rule_2</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( mobile_no_or_email_address__c )</errorConditionFormula>
    <errorDisplayField>mobile_no_or_email_address__c</errorDisplayField>
    <errorMessage>field should not be empty</errorMessage>
</ValidationRule>