force-app/main/default/objects/facebook_sign_up_form__c/validationRules/name_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>name_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR((REGEX(  first_name__c ,&quot;[a-zA-Z]+&quot;)), ISBLANK( first_name__c  ) ))</errorConditionFormula>
    <errorDisplayField>first_name__c</errorDisplayField>
    <errorMessage>numbers and blank fields are not allowed</errorMessage>
</ValidationRule>