force-app/main/default/objects/facebook_sign_up_form__c/validationRules/password_rule_2.validationRule-meta.xml
<ValidationRule>
    <fullName>password_rule_2</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( password__c )</errorConditionFormula>
    <errorDisplayField>password__c</errorDisplayField>
    <errorMessage>blank field not allowed</errorMessage>
</ValidationRule>