force-app/main/default/objects/facebook_sign_up_form__c/validationRules/password_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>password_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(  password__c  , &quot;((?=.*\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%]).{6,20})&quot;))</errorConditionFormula>
    <errorDisplayField>password__c</errorDisplayField>
    <errorMessage>password should have small case , upper case and special character</errorMessage>
</ValidationRule>