force-app/main/default/objects/facebook_sign_up_form__c/validationRules/surname_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>surname_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR((REGEX( surname__c ,&quot;[a-zA-Z]+&quot;)), ISBLANK( surname__c ) ))</errorConditionFormula>
    <errorDisplayField>surname__c</errorDisplayField>
    <errorMessage>number and blank field is not allowed</errorMessage>
</ValidationRule>